--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -3,10 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>master</artifactId>
+        <groupId>org.sakaiproject.idempotent</groupId>
+        <artifactId>base</artifactId>
         <version>24-SNAPSHOT</version>
-        <relativePath>../master/pom.xml</relativePath>
     </parent>
 
 	<groupId>org.sakaiproject.idempotent</groupId>
@@ -16,16 +15,16 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.sakaiproject.kernel</groupId>
-			<artifactId>sakai-kernel-util</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.sakaiproject.kernel</groupId>
 			<artifactId>sakai-kernel-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.sakaiproject.kernel</groupId>
 			<artifactId>sakai-component-manager</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.sakaiproject.kernel</groupId>
+            <artifactId>sakai-kernel-util</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
